--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- git add ., git commit -m "", git push origin main -->
 
 <head>
   <meta charset="UTF-8" />
@@ -10,8 +11,25 @@
 </head>
 
 <body>
-  <h1>Hello world</h1>
-  <h2>type in</h2>
+  <nav>
+    <div class="dropdown" style="float:right">
+      <button class="dropbtn">Menu</button>
+      <div class="dropdown-content">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Effects</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">FAQ</a></li>
+        </ul>
+
+      </div>
+    </div>
+  </nav>
+
+
+  <div class="FrontPage">
+    <img src="" alt="">
+  </div>
 </body>
 
 </html>
