coloured header & first div

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 </head>
 
 <body>
+  <!-- NAVIGATION TYPA BEAT -->
   <nav>
+    <div class="header">
+      <h1>Global Warming</h1>
+    </div>
     <div class="dropdown" style="float:right">
       <button class="dropbtn">Menu</button>
       <div class="dropdown-content">
@@ -21,15 +25,16 @@
           <li><a href="#">Services</a></li>
           <li><a href="#">FAQ</a></li>
         </ul>
-
       </div>
     </div>
   </nav>
 
-
-  <div class="FrontPage">
-    <img src="" alt="">
+  <!-- BEGINNING FRONT PAGE -->
+  <div class="front">
+    <img src="/ditm-mg-assignment-Shawn22035/IMG/factory.jpg" alt="Factory Image">
+    <p1>Proof</p1>
   </div>
+
 </body>
 
 </html>
