small adjustments to image #1

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 
   <!-- BEGINNING FRONT PAGE -->
   <div class="front">
-    <img src="/ditm-mg-assignment-Shawn22035/IMG/factory.jpg" alt="Factory Image">
-    <p1>Proof</p1>
+
+    <img src="/IMG/factory.jpg" alt="Factory Image">
+
   </div>
 
 </body>
