--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
 
 <body>
   <!-- NAVIGATION TYPA BEAT -->
-  <nav>
-    <div class="header">
-      <h1>Global Warming</h1>
-    </div>
-    <div class="dropdown" style="float:right">
+
+
+  <div class="header">
+    <div class="dropdown">
       <button class="dropbtn">Menu</button>
       <div class="dropdown-content">
         <ul>
@@ -27,14 +26,26 @@
         </ul>
       </div>
     </div>
-  </nav>
+  </div>
+
+  <div class="heading">
+    <h1>GLOBAL WARMING</h1>
+  </div>
+
+
+
 
   <!-- BEGINNING FRONT PAGE -->
   <div class="front">
 
     <img src="/IMG/factory.jpg" alt="Factory Image">
+    <div class="insideimage">
+      <p>Like hello hahahahaha</p>
+
+    </div>
 
   </div>
+
 
 </body>
 
