full front page redesign

--- a/index.html
+++ b/index.html
@@ -28,21 +28,15 @@
     </div>
   </div>
 
-  <div class="heading">
-    <h1>GLOBAL WARMING</h1>
-  </div>
-
-
-
 
   <!-- BEGINNING FRONT PAGE -->
-  <div class="front">
-
-    <img src="/IMG/factory.jpg" alt="Factory Image">
-    <div class="insideimage">
-      <p>Like hello hahahahaha</p>
+  <div class="frontpage">
+    <img src="/IMG/photo-1575057875091-31924ff2d9df.webp" alt="IMAGE">
+    <div class="text">
+      <h1>GLOBAL WARMING</h1>
 
     </div>
+  </div>
 
   </div>
 
