--- a/index.html
+++ b/index.html
@@ -13,32 +13,65 @@
 <body>
   <!-- NAVIGATION TYPA BEAT -->
 
-
-  <div class="header">
-    <div class="dropdown">
-      <button class="dropbtn">Menu</button>
-      <div class="dropdown-content">
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Effects</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">FAQ</a></li>
-        </ul>
+  <nav>
+    <div class="header">
+      <div class="dropdown">
+        <button class="dropbtn">Menu</button>
+        <div class="dropdown-content">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Effects</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">FAQ</a></li>
+          </ul>
+        </div>
       </div>
     </div>
-  </div>
-
+  </nav>
 
   <!-- BEGINNING FRONT PAGE -->
   <div class="frontpage">
     <img src="/IMG/photo-1575057875091-31924ff2d9df.webp" alt="IMAGE">
     <div class="text">
       <h1>GLOBAL WARMING</h1>
-
     </div>
   </div>
 
   </div>
+
+  <div class="mainfront">
+    <!-- <img src="/IMG/istockphoto-1332858442-170667a.jpg" alt="alt"> -->
+    <div class="textbox">
+      <h2>PrimarytextXD this is global warming!</h2>
+    </div>
+  </div>
+
+  <div class="footer">
+    <div class="form">
+      <!-- Form HTML code -->
+      <form>
+        <div class="EVC__Form-Container__Left">
+          <!-- TITLE -->
+          <h2>Sign Up!</h2>
+
+          <!-- FIRST NAME -->
+          <input id="FirstName" type="text" placeholder="Enter the door" name="name" />
+
+          <!-- LAST NAME -->
+          <input id="LastName" type="number" placeholder="Enter last Name" name="name" />
+
+          <!-- YEAR LEVEL -->
+          <input id="YearLevel" type="number" placeholder="11" name="YearLevel" min="1" *max="900" />
+
+          <!-- EMAIL -->
+          <input type="text" id="email" placeholder="Enter Email" name="email" />
+
+          <!-- Submit -->
+          <input id="submit" type="submit" />
+        </div>
+      </form>
+
+    </div>
 
 
 </body>
