frontpage and links added

--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
   </div>
 
   <div class="mainfront">
-    <!-- <img src="/IMG/istockphoto-1332858442-170667a.jpg" alt="alt"> -->
+    <img src="/IMG/istockphoto-1332858442-170667a.jpg" alt="alt">
     <div class="textbox">
-      <h2>PrimarytextXD this is global warming!</h2>
+      <a href="https://Youtube.com">This Is The Effects Of Global Warming</a>
+      <p>uofhoafohauhfiuheaiufhdakjfkjbeuahfiuae ouahefuihaejfnkjadfkbaiefiuheiuba aebfiubaieufiuahefihb akhsbfiuaheiubf
+        auaheoufhauhenfouhiusenf</p>
     </div>
   </div>
 
