--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
   <nav>
     <div class="header">
+      <!-- integrate button into image & push to right -->
       <div class="dropdown">
         <button class="dropbtn">Menu</button>
         <div class="dropdown-content">
@@ -46,6 +47,16 @@
       <p>uofhoafohauhfiuheaiufhdakjfkjbeuahfiuae ouahefuihaejfnkjadfkbaiefiuheiuba aebfiubaieufiuahefihb akhsbfiuaheiubf
         auaheoufhauhenfouhiusenf</p>
     </div>
+  </div>
+
+  <div class="links">
+    <div class="imagelinks">
+      <img src="/IMG/istockphoto-1292315355-170667a.jpg" class="firstlink" alt="">
+      <img src="/IMG/photo-1620214819239-704eb97df587.jpg" class="secondlink" alt="">
+      <img src="/IMG/istockphoto-1332858442-170667a.jpg" class="thirdlink" alt="">
+      <!-- <a href="#">FAQ</a> -->
+    </div>
+  </div>
   </div>
 
   <div class="footer">
