menu fixes and changes!

--- a/index.html
+++ b/index.html
@@ -13,29 +13,43 @@
 <body>
   <!-- NAVIGATION TYPA BEAT -->
 
-  <nav>
+  <!-- <nav>
     <div class="header">
       <!-- integrate button into image & push to right -->
-      <div class="dropdown">
-        <button class="dropbtn">Menu</button>
-        <div class="dropdown-content">
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Effects</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">FAQ</a></li>
-          </ul>
-        </div>
+  <div class="header">
+    <div class="dropdown">
+      <button class="dropbtn">Menu</button>
+      <div class="dropdown-content">
+        <ul>
+          <li><a href="https://google.com">Home</a></li>
+          <li><a href="#">Effects</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">FAQ</a></li>
+        </ul>
       </div>
     </div>
+  </div>
   </nav>
 
   <!-- BEGINNING FRONT PAGE -->
   <div class="frontpage">
     <img src="/IMG/photo-1575057875091-31924ff2d9df.webp" alt="IMAGE">
-    <div class="text">
-      <h1>GLOBAL WARMING</h1>
+    <div class="dropdown">
+      <button class="dropbtn">Menu</button>
+      <div class="dropdown-content">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Effects</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">FAQ</a></li>
+        </ul>
+      </div>
     </div>
+  </div>
+  </nav>
+  <div class="text">
+    <h1>GLOBAL WARMING</h1>
+  </div>
   </div>
 
   </div>
