--- a/index.html
+++ b/index.html
@@ -68,9 +68,18 @@
       <img src="/IMG/istockphoto-1292315355-170667a.jpg" class="firstlink" alt="">
       <img src="/IMG/photo-1620214819239-704eb97df587.jpg" class="secondlink" alt="">
       <img src="/IMG/istockphoto-1332858442-170667a.jpg" class="thirdlink" alt="">
-      <!-- <a href="#">FAQ</a> -->
     </div>
-  </div>
+    <div class="linkage">
+      <div class="linkone">
+        <a href="#">Effects</a>
+      </div>
+      <div class="linktwo">
+        <a href="#">Services</a>
+      </div>
+      <div class="linkthree">
+        <a href="#">FAQ</a>
+      </div>
+    </div>
   </div>
 
   <div class="footer">
