--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <button class="dropbtn">Menu</button>
       <div class="dropdown-content">
         <ul>
-          <li><a href="https://google.com">Home</a></li>
-          <li><a href="#">Effects</a></li>
+          <li><a href="http://127.0.0.1:5501/">Home</a></li>
+          <li><a href="http://127.0.0.1:5501/HTML/effectspage.html">Effects</a></li>
           <li><a href="#">Services</a></li>
           <li><a href="#">FAQ</a></li>
         </ul>
@@ -38,8 +38,8 @@
       <button class="dropbtn">Menu</button>
       <div class="dropdown-content">
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Effects</a></li>
+          <li><a href="http://127.0.0.1:5501/">Home</a></li>
+          <li><a href="http://127.0.0.1:5501/HTML/effectspage.html">Effects</a></li>
           <li><a href="#">Services</a></li>
           <li><a href="#">FAQ</a></li>
         </ul>
@@ -55,7 +55,9 @@
   </div>
 
   <div class="mainfront">
-    <img src="/IMG/istockphoto-1332858442-170667a.jpg" alt="alt">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/G4H1N_yXBiA" title="YouTube video player"
+      frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
     <div class="textbox">
       <a href="https://Youtube.com">This Is The Effects Of Global Warming</a>
       <p>uofhoafohauhfiuheaiufhdakjfkjbeuahfiuae ouahefuihaejfnkjadfkbaiefiuheiuba aebfiubaieufiuahefihb akhsbfiuaheiubf
@@ -91,10 +93,10 @@
           <h2>Sign Up!</h2>
 
           <!-- FIRST NAME -->
-          <input id="FirstName" type="text" placeholder="Enter the door" name="name" />
+          <input id="FirstName" type="text" placeholder="Enter first name" name="name" />
 
           <!-- LAST NAME -->
-          <input id="LastName" type="number" placeholder="Enter last Name" name="name" />
+          <input id="LastName" type="text" placeholder="Enter last Name" name="name" />
 
           <!-- YEAR LEVEL -->
           <input id="YearLevel" type="number" placeholder="11" name="YearLevel" min="1" *max="900" />
