new page added and changes made to effects page

--- a/HTML/faq.html
+++ b/HTML/faq.html
@@ -1,7 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<!-- git add ., git commit -m "", git push origin main -->
-
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -26,21 +22,4 @@
     </div>
     </nav>
 
-    <div class="effectsfrontpage">
-        <h3>THIS IS THE HEADER</h3>
-        <div class="effectsmain">
-            <img src="../IMG/istockphoto-1292315355-170667a.jpg" class="w3-border w3-padding w3-rounded" alt="">
-            <div class="effectsimageword">
-                <h4>Lorem Ipsum</h4>
-                <p>ooueafjauodjiuawd ouahwduohawduhiauwdhauhdiu iuawhdiuaidhiuwad iuahdiuhaiwudh iauwhdiuahwdi</p>
-            </div>
-        </div>
-    </div>
-
-
-    <div class="effectsfrontimage">
-        <div class="effectsfrontwords">
-            <h5>HIHIHIHI</h5>
-            <img src="../IMG/photo-1608454770647-01dc0f7dd97d.jpg" alt="">
-        </div>
-    </div>
+</body>
