--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <li><a href="http://127.0.0.1:5501/">Home</a></li>
           <li><a href="http://127.0.0.1:5501/HTML/effectspage.html">Effects</a></li>
           <li><a href="#">Services</a></li>
-          <li><a href="#">FAQ</a></li>
+          <li><a href="http://127.0.0.1:5501/HTML/faq.html">FAQ</a></li>
         </ul>
       </div>
     </div>
@@ -41,7 +41,7 @@
           <li><a href="http://127.0.0.1:5501/">Home</a></li>
           <li><a href="http://127.0.0.1:5501/HTML/effectspage.html">Effects</a></li>
           <li><a href="#">Services</a></li>
-          <li><a href="#">FAQ</a></li>
+          <li><a href="http://127.0.0.1:5501/HTML/faq.html">FAQ</a></li>
         </ul>
       </div>
     </div>
@@ -73,13 +73,13 @@
     </div>
     <div class="linkage">
       <div class="linkone">
-        <a href="#">Effects</a>
+        <a href="http://127.0.0.1:5501/HTML/effectspage.html">Effects</a>
       </div>
       <div class="linktwo">
         <a href="#">Services</a>
       </div>
       <div class="linkthree">
-        <a href="#">FAQ</a>
+        <a href="http://127.0.0.1:5501/HTML/faq.html">FAQ</a>
       </div>
     </div>
   </div>
