generic footer begin

--- a/HTML/effectspage.html
+++ b/HTML/effectspage.html
@@ -44,3 +44,10 @@
             <img src="../IMG/photo-1608454770647-01dc0f7dd97d.jpg" alt="">
         </div>
     </div>
+
+    <div class="genericfooter">
+        <p>hish</p>
+        <div class="footing">
+            <p>uhgiuehiafh</p>
+        </div>
+    </div>
