faq edits and new page

--- a/HTML/effectspage.html
+++ b/HTML/effectspage.html
@@ -20,6 +20,7 @@
                     <li><a href="http://127.0.0.1:5501/HTML/effectspage.html">Effects</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="http://127.0.0.1:5501/HTML/faq.html">FAQ</a></li>
+                    <li><a href="http://127.0.0.1:5501/HTML/mogus.html">Mogus</a></li>
                 </ul>
             </div>
         </div>
@@ -45,9 +46,19 @@
         </div>
     </div>
 
+
+    <div class="effectssecond">
+        <img src="../IMG/istockphoto-1292315355-170667a.jpg" class="w3-border w3-padding w3-rounded" alt="">
+        <div class="effectssecondimage">
+            <h5>Lorem Ipsum</h5>
+            <p>ooueafjauodjiuawd ouahwduohawduhiauwdhauhdiu iuawhdiuaidhiuwad iuahdiuhaiwudh iauwhdiuahwdi</p>
+        </div>
+    </div>
+
     <div class="genericfooter">
         <p>hish</p>
         <div class="footing">
             <p>uhgiuehiafh</p>
         </div>
     </div>
+</body>
