--- a/HTML/mogus.html
+++ b/HTML/mogus.html
@@ -22,27 +22,8 @@
         </div>
     </div>
     </nav>
-
-    <div class="faqhead">
-        <h1>header</h1>
-    </div>
-
-    <div class="faqpage">
-        <div class="faqwords">
-            <p>jnwijnfijwnfinwijenfijwneijfnwijn iejwnfijwnefijweifnwijn wjdnijwnefijnweijfniwj wejnfijwnfijwenfijnw
-                iwjnefijn</p>
-        </div>
-        <div class="faqlinks">
-            <div class="faqlink1">
-                <a href="https://youtube.com"><img src="../IMG/photo-1635695604201-2b718204bccb.jpg" alt=""></a>
-            </div>
-            <div class="faqlink2">
-                <a href="#"><img src="../IMG/photo-1635695604201-2b718204bccb.jpg" alt=""></a>
-            </div>
-            <div class="faqlink3">
-                <a href="#"><img src="../IMG/photo-1635695604201-2b718204bccb.jpg" alt=""></a>
-            </div>
-        </div>
+    <div class="mogus">
+        <img src="../IMG/mogus.png" alt="">
     </div>
 
 </body>
