--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <li><a href="http://127.0.0.1:5501/HTML/effectspage.html">Effects</a></li>
           <li><a href="#">Services</a></li>
           <li><a href="http://127.0.0.1:5501/HTML/faq.html">FAQ</a></li>
+          <li><a href="http://127.0.0.1:5501/HTML/mogus.html">Mogus</a></li>
         </ul>
       </div>
     </div>
@@ -42,6 +43,7 @@
           <li><a href="http://127.0.0.1:5501/HTML/effectspage.html">Effects</a></li>
           <li><a href="#">Services</a></li>
           <li><a href="http://127.0.0.1:5501/HTML/faq.html">FAQ</a></li>
+          <li><a href="http://127.0.0.1:5501/HTML/mogus.html">Mogus</a></li>
         </ul>
       </div>
     </div>
