--- a/HTML/faq.html
+++ b/HTML/faq.html
@@ -9,13 +9,12 @@
 <body>
     <div class="header">
         <div class="dropdown">
-            <button class="dropbtn">Menu</button>
+            <button class="dropbtn"><img src="../IMG/mog.png" alt=""></button>
             <div class="dropdown-content">
                 <ul>
                     <li><a href="http://127.0.0.1:5501/">Home</a></li>
                     <li><a href="http://127.0.0.1:5501/HTML/effectspage.html">Effects</a></li>
                     <li><a href="#">Services</a></li>
-                    <li><a href="http://127.0.0.1:5501/HTML/faq.html">FAQ</a></li>
                     <li><a href="http://127.0.0.1:5501/HTML/mogus.html">Mogus</a></li>
                 </ul>
             </div>
@@ -34,15 +33,20 @@
         </div>
         <div class="faqlinks">
             <div class="faqlink1">
-                <a href="https://youtube.com"><img src="../IMG/photo-1635695604201-2b718204bccb.jpg" alt=""></a>
+                <a href="https://youtube.com"><img src="../IMG/Instagram.jpg" alt=""></a>
             </div>
             <div class="faqlink2">
-                <a href="#"><img src="../IMG/photo-1635695604201-2b718204bccb.jpg" alt=""></a>
+                <a href="#"><img src="../IMG/twitter.jpg" alt=""></a>
             </div>
             <div class="faqlink3">
-                <a href="#"><img src="../IMG/photo-1635695604201-2b718204bccb.jpg" alt=""></a>
+                <a href="#"><img src="../IMG/slides.jpg" alt=""></a>
             </div>
         </div>
     </div>
 
+    <div class="genericfooter">
+        <p>hish</p>
+        <div class="footing">
+            <p>uhgiuehiafh</p>
+        </div>
 </body>
