--- a/HTML/dead.html
+++ b/HTML/dead.html
@@ -9,23 +9,21 @@
 <body>
     <div class="header">
         <div class="dropdown">
-            <button class="dropbtn"><img src="../IMG/mo.png" alt=""></button>
+            <button class="dropbtn"><img src="../IMG/32secususys51.png" alt=""></button>
             <div class="dropdown-content">
                 <ul>
                     <li><a href="http://127.0.0.1:5501/">Home</a></li>
                     <li><a href="http://127.0.0.1:5501/HTML/effectspage.html">Effects</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="http://127.0.0.1:5501/HTML/faq.html">FAQ</a></li>
+                    <li><a href="http://127.0.0.1:5501/HTML/mogus.html">Mogus</a></li>
                 </ul>
             </div>
         </div>
     </div>
-    </nav>
-    <div class="mogus">
-        <div class="kill">
-            <a href="http://127.0.0.1:5501/HTML/dead.html"><img src="../img/kill.jpg" alt=""></a>
-        </div>
-        <img src="../IMG/mogus.png" alt="">
+
+    <div class="dead">
+        <img src="../IMG/dead.jpg" alt="">
     </div>
 
 </body>
