--- a/HTML/effectspage.html
+++ b/HTML/effectspage.html
@@ -13,11 +13,10 @@
 <body>
     <div class="header">
         <div class="dropdown">
-            <button class="dropbtn">Menu</button>
+            <button class="dropbtn"><img src="../IMG/mogu.jpg" alt=""></button>
             <div class="dropdown-content">
                 <ul>
                     <li><a href="http://127.0.0.1:5501/">Home</a></li>
-                    <li><a href="http://127.0.0.1:5501/HTML/effectspage.html">Effects</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="http://127.0.0.1:5501/HTML/faq.html">FAQ</a></li>
                     <li><a href="http://127.0.0.1:5501/HTML/mogus.html">Mogus</a></li>
