--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
       <!-- integrate button into image & push to right -->
   <div class="header">
     <div class="dropdown">
-      <button class="dropbtn">Menu</button>
+      <button class="dropbtn"><img src="/IMG/mogus.png" alt=""></button>
       <div class="dropdown-content">
         <ul>
-          <li><a href="http://127.0.0.1:5501/">Home</a></li>
           <li><a href="http://127.0.0.1:5501/HTML/effectspage.html">Effects</a></li>
           <li><a href="#">Services</a></li>
           <li><a href="http://127.0.0.1:5501/HTML/faq.html">FAQ</a></li>
@@ -39,7 +38,6 @@
       <button class="dropbtn">Menu</button>
       <div class="dropdown-content">
         <ul>
-          <li><a href="http://127.0.0.1:5501/">Home</a></li>
           <li><a href="http://127.0.0.1:5501/HTML/effectspage.html">Effects</a></li>
           <li><a href="#">Services</a></li>
           <li><a href="http://127.0.0.1:5501/HTML/faq.html">FAQ</a></li>
