almost finished footer & new page

--- a/HTML/effectspage.html
+++ b/HTML/effectspage.html
@@ -6,7 +6,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>The Effects!</title>
+    <link rel="icon" href="../IMG/dead.jpg">
     <link rel="stylesheet" href="../CSS/styels.css" />
 </head>
 
@@ -55,7 +56,7 @@
     </div>
 
     <div class="genericfooter">
-        <p>hish</p>
+        <p>just pretend this is an actual footer</p>
         <div class="footing">
             <p>uhgiuehiafh</p>
         </div>
