--- a/HTML/faq.html
+++ b/HTML/faq.html
@@ -2,7 +2,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>FAQ</title>
+    <link rel="icon" href="../IMG/dead.jpg">
     <link rel="stylesheet" href="../CSS/styels.css" />
 </head>
 
@@ -23,7 +24,7 @@
     </nav>
 
     <div class="faqhead">
-        <h1>header</h1>
+        <h1>FAQ</h1>
     </div>
 
     <div class="faqpage">
@@ -44,8 +45,9 @@
         </div>
     </div>
 
+
     <div class="genericfooter">
-        <p>hish</p>
+        <p>just pretend that this is an actual footer</p>
         <div class="footing">
             <p>uhgiuehiafh</p>
         </div>
