more action work stuf

--- a/HTML/action.html
+++ b/HTML/action.html
@@ -11,10 +11,52 @@
 </head>
 
 <body>
+    <div class="header">
+        <div class="dropdown">
+            <button class="dropbtn"><img src="../IMG/Mogus.jpg" alt=""></button>
+            <div class="dropdown-content">
+                <ul>
+                    <li><a href="http://127.0.0.1:5501/">Home</a></li>
+                    <li><a href="http://127.0.0.1:5501/HTML/effectspage.html">Effects</a></li>
+                    <li><a href="http://127.0.0.1:5501/HTML/faq.html">FAQ</a></li>
+                    <li><a href="http://127.0.0.1:5501/HTML/mogus.html">Mogus</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
     <div class="actionheader">
         <h1>TAKING ACTION</h1>
     </div>
 
+    <div class="actionfront">
+        <div class="actionfronttext">
+            <h1>Text here lol</h1>
+        </div>
+        <img src="../IMG/photo-1635695604201-2b718204bccb.jpg" alt="">
+    </div>
+
+    <div class="actionsecond">
+        <img src="../IMG/istockphoto-1292315355-170667a.jpg" class="w3-border w3-padding w3-rounded" alt="">
+        <div class="actionssecondimage">
+            <h5>Lorem Ipsum</h5>
+            <p>ooueafjauodjiuawd ouahwduohawduhiauwdhauhdiu iuawhdiuaidhiuwad iuahdiuhaiwudh iauwhdiuahwdi</p>
+        </div>
+    </div>
+
+    <div class="actionfirst">
+        <div class="actionsfirstimage">
+            <h5>HIHIHIHI</h5>
+            <img src="../IMG/photo-1608454770647-01dc0f7dd97d.jpg" alt="">
+        </div>
+    </div>
+
+    <div class="genericfooter">
+        <p>just pretend this is an actual footer</p>
+        <div class="footing">
+            <p>uhgiuehiafh</p>
+        </div>
+    </div>
 
 </body>
 
