--- a/HTML/effectspage.html
+++ b/HTML/effectspage.html
@@ -18,7 +18,7 @@
             <div class="dropdown-content">
                 <ul>
                     <li><a href="http://127.0.0.1:5501/">Home</a></li>
-                    <li><a href="#">Services</a></li>
+                    <li><a href="http://127.0.0.1:5501/HTML/action.html">Action</a></li>
                     <li><a href="http://127.0.0.1:5501/HTML/faq.html">FAQ</a></li>
                     <li><a href="http://127.0.0.1:5501/HTML/mogus.html">Mogus</a></li>
                 </ul>
