--- a/HTML/mogus.html
+++ b/HTML/mogus.html
@@ -14,7 +14,7 @@
                 <ul>
                     <li><a href="http://127.0.0.1:5501/">Home</a></li>
                     <li><a href="http://127.0.0.1:5501/HTML/effectspage.html">Effects</a></li>
-                    <li><a href="#">Services</a></li>
+                    <li><a href="http://127.0.0.1:5501/HTML/action.html">Action</a></li>
                     <li><a href="http://127.0.0.1:5501/HTML/faq.html">FAQ</a></li>
                 </ul>
             </div>
