--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="dropdown-content">
         <ul>
           <li><a href="http://127.0.0.1:5501/HTML/effectspage.html">Effects</a></li>
-          <li><a href="#">Services</a></li>
+          <li><a href="http://127.0.0.1:5501/HTML/action.html">Services</a></li>
           <li><a href="http://127.0.0.1:5501/HTML/faq.html">FAQ</a></li>
           <li><a href="http://127.0.0.1:5501/HTML/mogus.html">Mogus</a></li>
         </ul>
@@ -40,7 +40,7 @@
       <div class="dropdown-content">
         <ul>
           <li><a href="http://127.0.0.1:5501/HTML/effectspage.html">Effects</a></li>
-          <li><a href="#">Services</a></li>
+          <li><a href="#">Action</a></li>
           <li><a href="http://127.0.0.1:5501/HTML/faq.html">FAQ</a></li>
           <li><a href="http://127.0.0.1:5501/HTML/mogus.html">Mogus</a></li>
         </ul>
@@ -77,7 +77,7 @@
         <a href="http://127.0.0.1:5501/HTML/effectspage.html">Effects</a>
       </div>
       <div class="linktwo">
-        <a href="#">Services</a>
+        <a href="http://127.0.0.1:5501/HTML/action.html">Action</a>
       </div>
       <div class="linkthree">
         <a href="http://127.0.0.1:5501/HTML/faq.html">FAQ</a>
