fix action page

--- a/HTML/action.html
+++ b/HTML/action.html
@@ -44,8 +44,8 @@
         </div>
     </div>
 
-    <div class="actionfirst">
-        <div class="actionsfirstimage">
+    <div class="effectsfrontimage">
+        <div class="effectsfrontwords">
             <h5>HIHIHIHI</h5>
             <img src="../IMG/photo-1608454770647-01dc0f7dd97d.jpg" alt="">
         </div>
