fixes and words added

--- a/HTML/effectspage.html
+++ b/HTML/effectspage.html
@@ -28,7 +28,7 @@
     </nav>
 
     <div class="effectsfrontpage">
-        <h3>THIS IS THE HEADER</h3>
+        <h3>The Effects</h3>
         <div class="effectsmain">
             <img src="../IMG/istockphoto-1292315355-170667a.jpg" class="w3-border w3-padding w3-rounded" alt="">
             <div class="effectsimageword">
