--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
       frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen></iframe>
     <div class="textbox">
-      <a href="https://Youtube.com">This Is The Effects Of Global Warming</a>
-      <p>uofhoafohauhfiuheaiufhdakjfkjbeuahfiuae ouahefuihaejfnkjadfkbaiefiuheiuba aebfiubaieufiuahefihb akhsbfiuaheiubf
-        auaheoufhauhenfouhiusenf</p>
+      <p>The Climate Crisis Has Been Overlooked for Too Long!</p>
     </div>
   </div>
 
