--- a/HTML/action.html
+++ b/HTML/action.html
@@ -11,31 +11,32 @@
 </head>
 
 <body>
+    <!-- header abd meny -->
     <div class="header">
         <div class="dropdown">
-            <button class="dropbtn"><img src="../IMG/Mogus.jpg" alt=""></button>
+            <button class="dropbtn">Menu</button>
             <div class="dropdown-content">
                 <ul>
                     <li><a href="http://127.0.0.1:5501/">Home</a></li>
                     <li><a href="http://127.0.0.1:5501/HTML/effectspage.html">Effects</a></li>
                     <li><a href="http://127.0.0.1:5501/HTML/faq.html">FAQ</a></li>
-                    <li><a href="http://127.0.0.1:5501/HTML/mogus.html">Mogus</a></li>
                 </ul>
             </div>
         </div>
     </div>
 
+    <!-- ehader -->
     <div class="actionheader">
         <h1>TAKING ACTION</h1>
     </div>
-
+    <!-- front image for the action oage -->
     <div class="actionfront">
         <div class="actionfronttext">
             <h1>Text here lol</h1>
         </div>
         <img src="../IMG/photo-1635695604201-2b718204bccb.jpg" alt="">
     </div>
-
+    <!-- actually the first text for the actipon page even though its called second -->
     <div class="actionsecond">
         <img src="../IMG/istockphoto-1292315355-170667a.jpg" class="w3-border w3-padding w3-rounded" alt="">
         <div class="actionssecondimage">
@@ -43,14 +44,14 @@
             <p>ooueafjauodjiuawd ouahwduohawduhiauwdhauhdiu iuawhdiuaidhiuwad iuahdiuhaiwudh iauwhdiuahwdi</p>
         </div>
     </div>
-
+    <!-- in reality the second text box on the action page even though it is just called front words -->
     <div class="actionfront">
         <div class="actionfrontwords">
             <h5>HIHIHIHI</h5>
             <img src="../IMG/photo-1608454770647-01dc0f7dd97d.jpg" alt="">
         </div>
     </div>
-
+    <!-- foot -->
     <div class="genericfooter">
         <p>just pretend this is an actual footer</p>
         <div class="footing">
