--- a/HTML/effectspage.html
+++ b/HTML/effectspage.html
@@ -10,23 +10,23 @@
     <link rel="icon" href="../IMG/dead.jpg">
     <link rel="stylesheet" href="../CSS/styels.css" />
 </head>
+<!-- Menu -->
 
 <body>
     <div class="header">
         <div class="dropdown">
-            <button class="dropbtn"><img src="../IMG/mogu.jpg" alt=""></button>
+            <button class="dropbtn">Menu</button>
             <div class="dropdown-content">
                 <ul>
                     <li><a href="http://127.0.0.1:5501/">Home</a></li>
                     <li><a href="http://127.0.0.1:5501/HTML/action.html">Action</a></li>
                     <li><a href="http://127.0.0.1:5501/HTML/faq.html">FAQ</a></li>
-                    <li><a href="http://127.0.0.1:5501/HTML/mogus.html">Mogus</a></li>
                 </ul>
             </div>
         </div>
     </div>
     </nav>
-
+    <!-- Front imaeg -->
     <div class="effectsfrontpage">
         <h3>The Effects</h3>
         <div class="effectsmain">
@@ -38,7 +38,7 @@
         </div>
     </div>
 
-
+    <!-- first text box -->
     <div class="effectsfrontimage">
         <div class="effectsfrontwords">
             <h5>HIHIHIHI</h5>
@@ -46,7 +46,7 @@
         </div>
     </div>
 
-
+    <!-- second dtexxt box -->
     <div class="effectssecond">
         <img src="../IMG/istockphoto-1292315355-170667a.jpg" class="w3-border w3-padding w3-rounded" alt="">
         <div class="effectssecondimage">
@@ -54,7 +54,7 @@
             <p>ooueafjauodjiuawd ouahwduohawduhiauwdhauhdiu iuawhdiuaidhiuwad iuahdiuhaiwudh iauwhdiuahwdi</p>
         </div>
     </div>
-
+    <!-- footer -->
     <div class="genericfooter">
         <p>just pretend this is an actual footer</p>
         <div class="footing">
