--- a/HTML/faq.html
+++ b/HTML/faq.html
@@ -8,25 +8,25 @@
 </head>
 
 <body>
+    <!-- menu -->
     <div class="header">
         <div class="dropdown">
-            <button class="dropbtn"><img src="../IMG/mog.png" alt=""></button>
+            <button class="dropbtn">Menu</button>
             <div class="dropdown-content">
                 <ul>
                     <li><a href="http://127.0.0.1:5501/">Home</a></li>
                     <li><a href="http://127.0.0.1:5501/HTML/effectspage.html">Effects</a></li>
                     <li><a href="http://127.0.0.1:5501/HTML/action.html">Action</a></li>
-                    <li><a href="http://127.0.0.1:5501/HTML/mogus.html">Mogus</a></li>
                 </ul>
             </div>
         </div>
     </div>
     </nav>
-
+    <!-- header -->
     <div class="faqhead">
         <h1>FAQ</h1>
     </div>
-
+    <!-- Faq text & links -->
     <div class="faqpage">
         <div class="faqwords">
             <p>jnwijnfijwnfinwijenfijwneijfnwijn iejwnfijwnefijweifnwijn wjdnijwnefijnweijfniwj wejnfijwnfijwenfijnw
