--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
       <!-- integrate button into image & push to right -->
   <div class="header">
     <div class="dropdown">
-      <button class="dropbtn"><img src="/IMG/mogus.png" alt=""></button>
+      <button class="dropbtn">Menu</button>
       <div class="dropdown-content">
         <ul>
           <li><a href="http://127.0.0.1:5501/HTML/effectspage.html">Effects</a></li>
           <li><a href="http://127.0.0.1:5501/HTML/action.html">Services</a></li>
           <li><a href="http://127.0.0.1:5501/HTML/faq.html">FAQ</a></li>
-          <li><a href="http://127.0.0.1:5501/HTML/mogus.html">Mogus</a></li>
         </ul>
       </div>
     </div>
@@ -64,6 +63,7 @@
     </div>
   </div>
 
+  <!-- Links at the bottom of oage -->
   <div class="links">
     <div class="imagelinks">
       <img src="/IMG/istockphoto-1292315355-170667a.jpg" class="firstlink" alt="">
@@ -83,32 +83,6 @@
     </div>
   </div>
 
-  <div class="footer">
-    <div class="form">
-      <!-- Form HTML code -->
-      <form>
-        <div class="EVC__Form-Container__Left">
-          <!-- TITLE -->
-          <h2>Sign Up!</h2>
-
-          <!-- FIRST NAME -->
-          <input id="FirstName" type="text" placeholder="Enter first name" name="name" />
-
-          <!-- LAST NAME -->
-          <input id="LastName" type="text" placeholder="Enter last Name" name="name" />
-
-          <!-- YEAR LEVEL -->
-          <input id="YearLevel" type="number" placeholder="11" name="YearLevel" min="1" *max="900" />
-
-          <!-- EMAIL -->
-          <input type="text" id="email" placeholder="Enter Email" name="email" />
-
-          <!-- Submit -->
-          <input id="submit" type="submit" />
-        </div>
-      </form>
-
-    </div>
 
 
 </body>
