--- a/HTML/action.html
+++ b/HTML/action.html
@@ -18,7 +18,7 @@
             <div class="dropdown-content">
                 <ul>
                     <li><a href="http://127.0.0.1:5501/">Home</a></li>
-                    <li><a href="http://127.0.0.1:5501/HTML/effectspage.html">Effects</a></li>
+                    <li><a href="http://127.0.0.1:5501/HTML/effectspage.html">Damages</a></li>
                     <li><a href="http://127.0.0.1:5501/HTML/faq.html">FAQ</a></li>
                 </ul>
             </div>
@@ -34,30 +34,33 @@
         <div class="actionfronttext">
             <h1>Text here lol</h1>
         </div>
-        <img src="../IMG/photo-1635695604201-2b718204bccb.jpg" alt="">
+        <img src="../IMG/photo-1570358934836-6802981e481e.webp" alt="">
     </div>
     <!-- actually the first text for the actipon page even though its called second -->
     <div class="actionsecond">
-        <img src="../IMG/istockphoto-1292315355-170667a.jpg" class="w3-border w3-padding w3-rounded" alt="">
+        <img src="../IMG/bike.webp" class="w3-border w3-padding w3-rounded" alt="">
         <div class="actionssecondimage">
-            <h5>Lorem Ipsum</h5>
-            <p>ooueafjauodjiuawd ouahwduohawduhiauwdhauhdiu iuawhdiuaidhiuwad iuahdiuhaiwudh iauwhdiuahwdi</p>
+            <h5>What Can You Do?</h5>
+            <p>There are many ways for people to reduce the amount of carbon emissions they produce daily. But a few
+                ways that you can reduce your carbon emissions are:</p>
+            <ul>
+                <li>Walk To School</li>
+                <li>Switch Off Appliances When Unused</li>
+                <li>Save Water</li>
+                <li>Use Recycleable/ More Environmentally Friendly Things</li>
+            </ul>
         </div>
     </div>
     <!-- in reality the second text box on the action page even though it is just called front words -->
     <div class="actionfront">
         <div class="actionfrontwords">
-            <h5>HIHIHIHI</h5>
-            <img src="../IMG/photo-1608454770647-01dc0f7dd97d.jpg" alt="">
+            <p>There are many more things that you as an individual can do to reduce your carbon footprint. Even doing
+                the smallest things to help the environment can snowball into a much healthier planet and surroundings
+            </p>
+            <img src="../IMG/trash.webp" alt="">
         </div>
     </div>
-    <!-- foot -->
-    <div class="genericfooter">
-        <p>just pretend this is an actual footer</p>
-        <div class="footing">
-            <p>uhgiuehiafh</p>
-        </div>
-    </div>
+
 
 </body>
 
