--- a/HTML/effectspage.html
+++ b/HTML/effectspage.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Effects!</title>
+    <title>The Damages!</title>
     <link rel="icon" href="../IMG/dead.jpg">
     <link rel="stylesheet" href="../CSS/styels.css" />
 </head>
@@ -28,9 +28,11 @@
     </nav>
     <!-- Front imaeg -->
     <div class="effectsfrontpage">
-        <h3>The Effects</h3>
+        <div class="effectsfronttext">
+            <h3>THE DAMAGES</h3>
+        </div>
         <div class="effectsmain">
-            <img src="../IMG/istockphoto-1292315355-170667a.jpg" class="w3-border w3-padding w3-rounded" alt="">
+            <img src="../IMG/factory.jpg" class="w3-border w3-padding w3-rounded" alt="">
             <div class="effectsimageword">
                 <h4>Lorem Ipsum</h4>
                 <p>ooueafjauodjiuawd ouahwduohawduhiauwdhauhdiu iuawhdiuaidhiuwad iuahdiuhaiwudh iauwhdiuahwdi</p>
@@ -41,8 +43,8 @@
     <!-- first text box -->
     <div class="effectsfrontimage">
         <div class="effectsfrontwords">
-            <h5>HIHIHIHI</h5>
-            <img src="../IMG/photo-1608454770647-01dc0f7dd97d.jpg" alt="">
+            <h5>What Damages Have Been Done</h5>
+            <img src="../IMG/andreas-felske-oQEdDIMEIlc-unsplash.jpg" alt="">
         </div>
     </div>
 
@@ -50,15 +52,10 @@
     <div class="effectssecond">
         <img src="../IMG/istockphoto-1292315355-170667a.jpg" class="w3-border w3-padding w3-rounded" alt="">
         <div class="effectssecondimage">
-            <h5>Lorem Ipsum</h5>
-            <p>ooueafjauodjiuawd ouahwduohawduhiauwdhauhdiu iuawhdiuaidhiuwad iuahdiuhaiwudh iauwhdiuahwdi</p>
+            <p>Manufacturing companies create greenhouse gasses and greenhouse gasses caused by cows farting. These
+                gasses damage the ozone layer exposing the Earth to larger amounts of light which leads to ice burgs
+                melting which causes the biggest concern when it comes to global warming which is sea level rise. When
+                the icebergs melt the sea levels start to rise which will at some point continue to rise above the land
+                levels.</p>
         </div>
     </div>
-    <!-- footer -->
-    <div class="genericfooter">
-        <p>just pretend this is an actual footer</p>
-        <div class="footing">
-            <p>uhgiuehiafh</p>
-        </div>
-    </div>
-</body>
