--- a/HTML/faq.html
+++ b/HTML/faq.html
@@ -15,7 +15,7 @@
             <div class="dropdown-content">
                 <ul>
                     <li><a href="http://127.0.0.1:5501/">Home</a></li>
-                    <li><a href="http://127.0.0.1:5501/HTML/effectspage.html">Effects</a></li>
+                    <li><a href="http://127.0.0.1:5501/HTML/effectspage.html">Damages</a></li>
                     <li><a href="http://127.0.0.1:5501/HTML/action.html">Action</a></li>
                 </ul>
             </div>
@@ -29,8 +29,23 @@
     <!-- Faq text & links -->
     <div class="faqpage">
         <div class="faqwords">
-            <p>jnwijnfijwnfinwijenfijwneijfnwijn iejwnfijwnefijweifnwijn wjdnijwnefijnweijfniwj wejnfijwnfijwenfijnw
-                iwjnefijn</p>
+            <ul>
+                <li>Why read from this website?</li>
+                <ul>
+                    <li>Because it is very reliable</li>
+                </ul>
+                <li>Where can I find more information about global warming?</li>
+                <ul>
+                    <li>At different official government sites such as <a
+                            href="https://earthobservatory.nasa.gov/features/GlobalWarming">here!</a> </li>
+                </ul>
+                <li>Why should I care?</li>
+                <ul>
+                    <li>Global warming is a constantly rising problem (literally), if we continue to overlook the rising
+                        sea levels and dangers that come along with it we will all be swimming instead of walking in the
+                        near future.</li>
+                </ul>
+            </ul>
         </div>
         <div class="faqlinks">
             <div class="faqlink1">
@@ -46,9 +61,4 @@
     </div>
 
 
-    <div class="genericfooter">
-        <p>just pretend that this is an actual footer</p>
-        <div class="footing">
-            <p>uhgiuehiafh</p>
-        </div>
 </body>
