--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
 <body>
   <!-- NAVIGATION TYPA BEAT -->
 
-  <!-- <nav>
+  <nav>
     <div class="header">
       <!-- integrate button into image & push to right -->
-  <div class="header">
-    <div class="dropdown">
-      <button class="dropbtn">Menu</button>
-      <div class="dropdown-content">
-        <ul>
-          <li><a href="http://127.0.0.1:5501/HTML/effectspage.html">Effects</a></li>
-          <li><a href="http://127.0.0.1:5501/HTML/action.html">Services</a></li>
-          <li><a href="http://127.0.0.1:5501/HTML/faq.html">FAQ</a></li>
-        </ul>
+      <div class="header">
+        <div class="dropdown">
+          <button class="dropbtn">Menu</button>
+          <div class="dropdown-content">
+            <ul>
+              <li><a href="http://127.0.0.1:5501/HTML/effectspage.html">Damages</a></li>
+              <li><a href="http://127.0.0.1:5501/HTML/action.html">Services</a></li>
+              <li><a href="http://127.0.0.1:5501/HTML/faq.html">FAQ</a></li>
+            </ul>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
   </nav>
 
   <!-- BEGINNING FRONT PAGE -->
@@ -72,7 +72,7 @@
     </div>
     <div class="linkage">
       <div class="linkone">
-        <a href="http://127.0.0.1:5501/HTML/effectspage.html">Effects</a>
+        <a href="http://127.0.0.1:5501/HTML/effectspage.html">Damages</a>
       </div>
       <div class="linktwo">
         <a href="http://127.0.0.1:5501/HTML/action.html">Action</a>
